--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       </div>
       <div class="hero-overlay"></div>
       <div class="container">
-        <div class="hero-content">
+        <div class="hero-content fade-in">
           <h1 class="logo">PANZZi</h1>
           <div class="hero-slogan">
             <div class="slogan-line">
@@ -51,7 +51,7 @@
               <span class="slogan-divider">•</span>
               <span class="slogan-item">Посуда</span>
               <span class="slogan-divider">•</span>
-              <span class="slogan-item">Стройматериалы</span>
+              <span class="slogan-item">Материалы для интерьера</span>
             </div>
             <div class="slogan-description">
               Оснащаем рестораны, кафе, отели, магазины,<br />
@@ -477,7 +477,7 @@
       <div class="container">
         <span class="section-subtitle text-center">Свяжитесь с нами</span>
         <h2 class="section-title text-center">Контакты</h2>
-        <div class="contacts-container">
+        <div class="contacts-container  animate fade-in delay-2">
           <p>
             Свяжитесь с нами через удобный для вас мессенджер или социальную
             сеть. Мы ответим в кратчайшие сроки и поможем с вашим проектом.
