--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="supported-languages" content="ru, en" />
-    <title>PANZZi - Премиум мебель и материалы из Китая</title>
+    <title>PANZZi</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -19,7 +19,7 @@
   </head>
   <body>
 <div class="language-switcher">
-  <button id="language-toggle" class="lang-btn" data-lang="ru">RU</button>
+  <button id="language-toggle" class="lang-btn" data-lang="ru">EN</button>
 </div>
     <!-- Hero Section -->
     <section class="hero" id="home">
