--- a/index.html
+++ b/index.html
@@ -201,231 +201,155 @@
         </div>
       </div>
     </div>
+
     <!-- Projects Section -->
-    <section class="projects" id="projects">
-      <div class="container">
-        <span class="section-subtitle text-center">Наши работы</span>
-        <h2 class="section-title text-center">Реализованные проекты</h2>
-        <div class="projects-container">
-          <div class="project-item">
-            <div class="project-image">
-              <img
-                src="https://images.unsplash.com/photo-1517248135467-4c7edcad34c4?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80"
-                alt="Ресторан премиум-класса"
-              />
+<section class="projects" id="projects">
+  <div class="container">
+    <span class="section-subtitle text-center">Наши работы</span>
+    <h2 class="section-title text-center">Реализованные проекты</h2>
+    <div class="projects-container">
+      <!-- Project 1 - Lazy Bar -->
+      <div class="project-item">
+        <div class="project-image">
+          <img
+            src="content/projects/lazy_bar/photo_1_2025-07-07_12-58-50.jpg"
+            alt="Lazy Bar"
+          />
+        </div>
+        <div class="project-info">
+          <span class="project-category">Бар</span>
+          <h3 class="project-title">Lazy Bar</h3>
+          <p class="project-description">
+            Полное оснащение бара под ключ: отделочные материалы, мебель и посуда.
+            Создали уютную атмосферу для отдыха и общения.
+          </p>
+          <div class="project-features">
+            <div class="project-feature">
+              <i class="fas fa-check-circle"></i>
+              <span>Индивидуальный подбор материалов</span>
             </div>
-            <div class="project-info">
-              <span class="project-category">Ресторан</span>
-              <h3 class="project-title">Премиум-класса в Шанхае</h3>
-              <p class="project-description">
-                Полное оснащение ресторана на 120 посадочных мест. Подбор
-                мебели, освещения, посуды и текстиля в едином стиле.
-              </p>
-              <div class="project-features">
-                <div class="project-feature">
-                  <i class="fas fa-check-circle"></i>
-                  <span>Индивидуальный дизайн мебели</span>
-                </div>
-                <div class="project-feature">
-                  <i class="fas fa-check-circle"></i>
-                  <span>Эксклюзивные световые решения</span>
-                </div>
-                <div class="project-feature">
-                  <i class="fas fa-check-circle"></i>
-                  <span>Авторская посуда и текстиль</span>
-                </div>
-              </div>
-              <a class="project-link show-modal" data-modal="modal1"
-                >Подробнее о проекте <i class="fas fa-arrow-right"></i
-              ></a>
+            <div class="project-feature">
+              <i class="fas fa-check-circle"></i>
+              <span>Эргономичная барная мебель</span>
+            </div>
+            <div class="project-feature">
+              <i class="fas fa-check-circle"></i>
+              <span>Специальная барная посуда</span>
             </div>
           </div>
-          <div class="project-item">
-            <div class="project-image">
-              <img
-                src="https://images.unsplash.com/photo-1555396273-367ea4eb4db5?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80"
-                alt="Уютное кафе"
-              />
-            </div>
-            <div class="project-info">
-              <span class="project-category">Кафе</span>
-              <h3 class="project-title">Уютное кафе</h3>
-              <p class="project-description">
-                Создали атмосферное пространство с авторской мебелью и
-                уникальным освещением. Подобрали посуду и аксессуары.
-              </p>
-              <div class="project-features">
-                <div class="project-feature">
-                  <i class="fas fa-check-circle"></i>
-                  <span>Мебель ручной работы</span>
-                </div>
-                <div class="project-feature">
-                  <i class="fas fa-check-circle"></i>
-                  <span>Дизайнерские светильники</span>
-                </div>
-                <div class="project-feature">
-                  <i class="fas fa-check-circle"></i>
-                  <span>Комплексное оснащение</span>
-                </div>
-              </div>
-              <a class="project-link show-modal" data-modal="modal2"
-                >Подробнее о проекте <i class="fas fa-arrow-right"></i
-              ></a>
-            </div>
-          </div>
-          <div class="project-item">
-            <div class="project-image">
-              <img
-                src="http://architizer-prod.imgix.net/mediadata/projects/182010/48c84a73.jpg?w=1680&amp;q=60&amp;auto=format,compress&amp;cs=strip"
-                alt="Освещение и мебель для виллы"
-              />
-            </div>
-            <div class="project-info">
-              <span class="project-category">Вилла</span>
-              <h3 class="project-title">Освещение и мебель</h3>
-              <p class="project-description">
-                Эксклюзивные решения для частной виллы. Разработали дизайн
-                мебели под интерьер, изготовили и доставили из Китая.
-              </p>
-              <div class="project-features">
-                <div class="project-feature">
-                  <i class="fas fa-check-circle"></i>
-                  <span>Индивидуальные проекты мебели</span>
-                </div>
-                <div class="project-feature">
-                  <i class="fas fa-check-circle"></i>
-                  <span>Система "умного" освещения</span>
-                </div>
-                <div class="project-feature">
-                  <i class="fas fa-check-circle"></i>
-                  <span>Полный цикл реализации</span>
-                </div>
-              </div>
-              <a class="project-link show-modal" data-modal="modal3"
-                >Подробнее о проекте <i class="fas fa-arrow-right"></i
-              ></a>
-            </div>
-          </div>
+          <a class="project-link btn-gallery" data-gallery="lazy_bar"
+            >Подробнее о проекте <i class="fas fa-arrow-right"></i
+          ></a>
         </div>
       </div>
-    </section>
 
-    <!-- Modal 1 - Ресторан премиум-класса -->
-    <div id="modal1" class="modal">
-      <div class="modal-content">
-        <span class="close-modal">&times;</span>
-        <h3 class="modal-title">Ресторан премиум-класса в Шанхае</h3>
-        <p class="modal-description">
-          Полное оснащение ресторана на 120 посадочных мест. Мы разработали
-          индивидуальный дизайн мебели, подобрали эксклюзивные световые решения
-          и авторскую посуду. Проект включал комплексное оснащение всего
-          пространства с учетом особенностей китайской кухни и высоких
-          стандартов заведения.
-          <br /><br />
-          <strong>Особенности проекта:</strong>
-          <br />- Мебель из массива дерева с ручной резьбой <br />- Система
-          подсветки с регулируемой температурой света <br />- Фарфоровая посуда
-          по индивидуальному заказу <br />- Полный цикл реализации за 3 месяца
-        </p>
-        <div class="gallery">
-          <div class="gallery-item">
-            <img
-              src="https://avatars.mds.yandex.net/i?id=97bb525e60f90fc3643a053138ef5fd4_l-5545903-images-thumbs&n=13"
-              alt="Интерьер ресторана"
-            />
+      <!-- Project 2 - MOM ресторан -->
+      <div class="project-item">
+        <div class="project-image">
+          <img
+            src="content/projects/mom_restaurant/photo_6_2025-07-07_12-59-31.jpg"
+            alt="MOM ресторан"
+          />
+        </div>
+        <div class="project-info">
+          <span class="project-category">Ресторан</span>
+          <h3 class="project-title">MOM ресторан в Шанхае</h3>
+          <p class="project-description">
+            Комплексное оснащение ресторана под ключ: материалы, мебель и посуда.
+            Уникальный дизайн и функциональное пространство.
+          </p>
+          <div class="project-features">
+            <div class="project-feature">
+              <i class="fas fa-check-circle"></i>
+              <span>Премиальные отделочные материалы</span>
+            </div>
+            <div class="project-feature">
+              <i class="fas fa-check-circle"></i>
+              <span>Авторская мебель ручной работы</span>
+            </div>
+            <div class="project-feature">
+              <i class="fas fa-check-circle"></i>
+              <span>Эксклюзивная фарфоровая посуда</span>
+            </div>
           </div>
-          <div class="gallery-item">
-            <img
-              src="https://images.unsplash.com/photo-1555396273-367ea4eb4db5?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=80"
-              alt="Зал ресторана"
-            />
+          <a class="project-link  btn-gallery" data-gallery="mom_restaurant"
+            >Подробнее о проекте <i class="fas fa-arrow-right"></i
+          ></a>
+        </div>
+      </div>
+
+      <!-- Project 3 - Showroom Panzzi -->
+      <div class="project-item">
+        <div class="project-image">
+          <img
+            src="content/projects/panzzi_showroom/photo_7_2025-07-07_13-00-12.jpg"
+            alt="Showroom Panzzi"
+          />
+        </div>
+        <div class="project-info">
+          <span class="project-category">Шоурум</span>
+          <h3 class="project-title">Showroom Panzzi в Шанхае</h3>
+          <p class="project-description">
+            Оснащение шоурума: материалы, мебель, освещение и посуда.
+            Современное пространство для демонстрации продукции.
+          </p>
+          <div class="project-features">
+            <div class="project-feature">
+              <i class="fas fa-check-circle"></i>
+              <span>Современные отделочные материалы</span>
+            </div>
+            <div class="project-feature">
+              <i class="fas fa-check-circle"></i>
+              <span>Дизайнерское освещение</span>
+            </div>
+            <div class="project-feature">
+              <i class="fas fa-check-circle"></i>
+              <span>Фирменная мебель и посуда</span>
+            </div>
           </div>
-          <div class="gallery-item">
-            <img
-              src="https://avatars.mds.yandex.net/i?id=5d1a149e53330cb8c48b925f536a2b5d49531694-4228230-images-thumbs&n=13"
-              alt="Барная стойка"
-            />
+          <a class="project-link  btn-gallery" data-gallery="panzzi_showroom"
+            >Подробнее о проекте <i class="fas fa-arrow-right"></i
+          ></a>
+        </div>
+      </div>
+
+      <!-- Project 4 - Вилла -->
+      <div class="project-item">
+        <div class="project-image">
+          <img
+            src="content/projects/villa_project/villa_project1.jpg"
+            alt="Вилла"
+          />
+        </div>
+        <div class="project-info">
+          <span class="project-category">Вилла</span>
+          <h3 class="project-title">Частная вилла</h3>
+          <p class="project-description">
+            Оснащение виллы: мебель и плитка для интерьера.
+            Элегантное сочетание комфорта и роскоши.
+          </p>
+          <div class="project-features">
+            <div class="project-feature">
+              <i class="fas fa-check-circle"></i>
+              <span>Эксклюзивная мебель на заказ</span>
+            </div>
+            <div class="project-feature">
+              <i class="fas fa-check-circle"></i>
+              <span>Премиальная плитка и материалы</span>
+            </div>
+            <div class="project-feature">
+              <i class="fas fa-check-circle"></i>
+              <span>Индивидуальный дизайн</span>
+            </div>
           </div>
+          <a class="project-link  btn-gallery" data-gallery="villa_project"
+            >Подробнее о проекте <i class="fas fa-arrow-right"></i
+          ></a>
         </div>
       </div>
     </div>
-
-    <!-- Modal 2 - Уютное кафе -->
-    <div id="modal2" class="modal">
-      <div class="modal-content">
-        <span class="close-modal">&times;</span>
-        <h3 class="modal-title">Уютное кафе в центре города</h3>
-        <p class="modal-description">
-          Создание атмосферного пространства для небольшого кафе на 50
-          посадочных мест. Особое внимание уделялось созданию домашней уютной
-          атмосферы с элементами лофта. Проект реализован за 2 месяца.
-          <br /><br />
-          <strong>Особенности проекта:</strong>
-          <br />- Деревянные столы с эпоксидной смолой ручной работы <br />-
-          Кованые стулья и светильники в индустриальном стиле <br />- Текстиль
-          из натуральных материалов <br />- Открытая кухня с медными элементами
-        </p>
-        <div class="gallery">
-          <div class="gallery-item">
-            <img
-              src="https://avatars.mds.yandex.net/i?id=97bb525e60f90fc3643a053138ef5fd4_l-5545903-images-thumbs&n=13"
-              alt="Общий вид кафе"
-            />
-          </div>
-          <div class="gallery-item">
-            <img
-              src="https://images.unsplash.com/photo-1517248135467-4c7edcad34c4?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=80"
-              alt="Зона отдыха"
-            />
-          </div>
-          <div class="gallery-item">
-            <img
-              src="https://avatars.mds.yandex.net/i?id=5d1a149e53330cb8c48b925f536a2b5d49531694-4228230-images-thumbs&n=13"
-              alt="Барная стойка"
-            />
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- Modal 3 - Вилла -->
-    <div id="modal3" class="modal">
-      <div class="modal-content">
-        <span class="close-modal">&times;</span>
-        <h3 class="modal-title">Оснащение частной виллы</h3>
-        <p class="modal-description">
-          Комплексное оснащение частной виллы площадью 850 м². Проект включал
-          мебель для всех помещений, систему освещения, текстиль и предметы
-          декора. Срок реализации - 5 месяцев.
-          <br /><br />
-          <strong>Особенности проекта:</strong>
-          <br />- Мебель из редких пород дерева по индивидуальным эскизам
-          <br />- Умная система освещения с 5 сценариями <br />- Авторские
-          люстры из муранского стекла <br />- Текстиль из натурального шелка и
-          льна <br />- Полный комплект посуды на 24 персоны
-        </p>
-        <div class="gallery">
-          <div class="gallery-item">
-            <img
-              src="https://avatars.mds.yandex.net/i?id=97bb525e60f90fc3643a053138ef5fd4_l-5545903-images-thumbs&n=13"
-              alt="Гостиная"
-            />
-          </div>
-          <div class="gallery-item">
-            <img
-              src="https://images.unsplash.com/photo-1555396273-367ea4eb4db5?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=80"
-              alt="Столовая"
-            />
-          </div>
-          <div class="gallery-item">
-            <img
-              src="https://avatars.mds.yandex.net/i?id=5d1a149e53330cb8c48b925f536a2b5d49531694-4228230-images-thumbs&n=13"
-              alt="Спальня"
-            />
-          </div>
-        </div>
-      </div>
-    </div>
+  </div>
+</section>
 
     <!-- Why Choose Us Section -->
     <section class="why-choose-us" id="why-choose-us">
